--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.0",
+    "axios": "0.26.0",
     "bootstrap": "^5.2.3",
     "fontawesome-free": "^1.0.4",
-    "jest": "^27.5.1",
     "jsdoc": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,6 +47,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@types/jest": "^27.4.0",
-    "ts-jest": "^27.1.3"
+    "ts-jest": "^27.1.3",
+    "jest": "^27.5.1"
   }
 }
